@@ -21,7 +21,6 @@
     along with FLVMeta; if not, write to the Free Software
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-
 #include "types.h"
 
 #ifndef WORDS_BIGENDIAN
